Criação da janela Sobre

--- a/app/about.html
+++ b/app/about.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
-    <title>Alura Timer</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <title>Sobre Alura Timer</title>
   </head>
   <body>
-    <h1>Alura Timer</h1>
-
-    <a href="#" id="about-link">Sobre</a>
-
-    <script src="js/renderer.js"></script>
+    <p>O Alura Timer é para você guardar seus tempos de estudo na Alura.</p>
   </body>
 </html>
