Estilização da tela Sobre e utilização do Shell Process

--- a/app/about.html
+++ b/app/about.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
     <title>Sobre Alura Timer</title>
+    <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
-    <p>O Alura Timer é para você guardar seus tempos de estudo na Alura.</p>
+    <div class="container">
+      <img src="images/icon.png" alt="Logo do AluraTimer" />
+      <p>O Alura Timer é para você guardar seus tempos de estudo na Alura.</p>
+      <p>Versão: 1.0.0</p>
+      <p>Feito por <a href="#" id="creator-link">Yuri Azevedo</a></p>
+      <p>Versão do Electron <span id="electron-version"></span></p>
+      <a href="#" id="about-close">Fechar</a>
+    </div>
+
+    <script src="js/about.js"></script>
   </body>
 </html>
