Novo visual da aplicação

--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,29 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <h1>Alura Timer</h1>
+    <section class="container">
+      <div id="about-link">
+        <img class="btn-info" src="images/info-button.svg" />
+      </div>
 
-    <a href="#" id="about-link">Sobre</a>
+      <h1 class="title">Alura Timer</h1>
+
+      <div class="content">
+        <div class="timer">
+          <div class="clock">
+            <span class="time">00:10:23</span>
+          </div>
+
+          <div class="actions">
+            <img class="btn-play" src="images/play-button.svg" />
+          </div>
+        </div>
+
+        <div class="courses-container">
+          <strong class="course">React Native</strong>
+        </div>
+      </div>
+    </section>
 
     <script src="js/renderer.js"></script>
   </body>
