--- a/app/about.html
+++ b/app/about.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="worker-src https: 'unsafe-eval'"
+    />
     <title>Sobre Alura Timer</title>
     <link rel="stylesheet" href="css/about.css" />
   </head>
+
   <body>
     <div class="container">
       <img src="images/icon.png" alt="Logo do AluraTimer" />
