--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="worker-src https: 'unsafe-eval'"
+    />
     <title>Alura Timer</title>
     <link rel="stylesheet" href="css/index.css" />
   </head>
+
   <body>
     <section class="container">
       <div id="about-link">
@@ -18,7 +22,7 @@
       <div class="content">
         <div class="timer">
           <div class="clock">
-            <span class="time">00:10:23</span>
+            <span class="time">00:00:00</span>
           </div>
 
           <div class="actions">
@@ -32,7 +36,8 @@
       </div>
     </section>
 
-    <script src="js/renderer.js"></script>
-    <script src="js/timer.js"></script>
+    <script>
+      require('./js/renderer.js')
+    </script>
   </body>
 </html>
