Layout do campo de adicionar cursos Refatoração no nome dos ícones

--- a/app/about.html
+++ b/app/about.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="container">
-      <img src="images/icon.png" alt="Logo do AluraTimer" />
+      <img src="images/app-icon.png" alt="Logo do AluraTimer" />
       <p>O Alura Timer é para você guardar seus tempos de estudo na Alura.</p>
       <p>Versão: 1.0.0</p>
       <p>Feito por <a href="#" id="creator-link">Yuri Azevedo</a></p>
