--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <body>
     <section class="container">
       <div id="about-link">
-        <img class="btn-info" src="images/info-button.svg" />
+        <img class="btn-info" src="images/icon-info.svg" />
       </div>
 
       <h1 class="title">Alura Timer</h1>
@@ -26,7 +26,7 @@
           </div>
 
           <div class="actions">
-            <img class="btn-play" src="images/play-button.svg" />
+            <img class="btn-play" src="images/icon-play.svg" />
           </div>
         </div>
 
@@ -34,6 +34,15 @@
           <strong class="course">React Native</strong>
         </div>
       </div>
+
+      <form class="group">
+        <input type="text" class="add-field" required />
+        <button type="submit" class="btn-add-course">
+          <img src="images/icon-plus.svg" />
+        </button>
+        <span class="bar"></span>
+        <label>Novo curso</label>
+      </form>
     </section>
 
     <script>
