Adição de um novo curso

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <form class="group">
-        <input type="text" class="add-field" required />
+        <input type="text" name="course" class="add-field" required />
         <button type="submit" class="btn-add-course">
           <img src="images/icon-plus.svg" />
         </button>
