--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="courses-container">
-          <strong class="course">React Native</strong>
+          <strong class="course"></strong>
         </div>
       </div>
 
