Scripts de empacotamento para Linux, Mac e Win Também foram feitas algumas alterações na estrutura do projeto

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <body>
     <section class="container">
       <div id="about-link">
-        <img class="btn-info" src="images/icon-info.svg" />
+        <img class="btn-info" src="img/icon-info.svg" />
       </div>
 
       <h1 class="title">Alura Timer</h1>
@@ -26,7 +26,7 @@
           </div>
 
           <div class="actions">
-            <img class="btn-play" src="images/icon-play.svg" />
+            <img class="btn-play" src="img/icon-play.svg" />
           </div>
         </div>
 
@@ -38,7 +38,7 @@
       <form class="group">
         <input type="text" name="course" class="add-field" required />
         <button type="submit" class="btn-add-course">
-          <img src="images/icon-plus.svg" />
+          <img src="img/icon-plus.svg" />
         </button>
         <span class="bar"></span>
         <label>Novo curso</label>
